# Minesweeper2.5

./: .gitignore  Cargo.toml  README.md  clean.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/api/: main.py
app/static/: client.js  database.json
app/static/styles/: base.css
app/static/wasm/: main.d.ts  main.js  main_bg.wasm.d.ts
app/templates/: base.html
app/templates/components/: game.html
app/templates/pages/: game.html  homepage.html  login.html
docs/: index.html
docs/source/: conf.py  index.rst
docs/source/_autosummary/: freddy_wordingham.rst
docs/wasm/: main.js
lib/freddy_wordingham/: __init__.py
plugins/board_plugin/: Cargo.toml
plugins/board_plugin/src/: bounds.rs  lib.rs
plugins/board_plugin/src/components/: bomb_neighbour.rs  coordinates.rs  mod.rs
plugins/board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
plugins/board_plugin/src/systems/: input.rs  mark.rs  uncover.rs
src/: lib.rs
tests/integration/: test_installation.py
