[package]
name = "fw"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit", "png"] }
board_plugin = { path = "plugins/board_plugin" }
bevy-inspector-egui = { version = "0.11", optional = true }
wasm-bindgen = { version = "0.2"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["x11"]

[workspace]
members = ["plugins/board_plugin"]
