[package]
name = "fw"
version = "0.1.0"
authors = ["Freddy Wordingham <f.wordingham@databound.co.uk>"]
edition = "2021"
description = "Simulation AI playground"
repository = "https://github.com/FreddyWordingham/FreddyWordingham"
readme = "README.md"
license = "MIT"
keywords = ["simulation", "machine-learning", "ai"]
categories = ["science", "simulation", "ai"]
documentation = "https://FreddyWordingham.github.io/FreddyWordingham"
exclude = ["app/", "resources/", "tests/", "assets/", "docs/"]


[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit", "png"] }
board_plugin = { path = "plugins/board_plugin" }
bevy-inspector-egui = { version = "0.11", optional = true }
wasm-bindgen = { version = "0.2"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["x11"]

[workspace]
members = ["plugins/board_plugin"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
