[tool.poetry]
name = "freddy_wordingham"
packages = [
    { include = "freddy_wordingham", from = "lib" },
]
version = "0.1.0"
description = "Personal website and playground"
authors = ["Freddy Wordingham"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
