[package]
name = "board_plugin"
version = "0.1.0"
authors = ["Freddy Wordingham <f.wordingham@databound.co.uk>"]
edition = "2021"
description = "Simulation world board"
repository = "https://github.com/FreddyWordingham/FreddyWordingham"
readme = "README.md"
license = "MIT"
keywords = ["simulation", "domain"]
categories = ["science", "simulation", "ai"]
documentation = "https://FreddyWordingham.github.io/FreddyWordingham"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["render"] }
bevy-inspector-egui = { version = "0.11", optional = true }
colored = { version = "2.0", optional = true }
ndarray = "0.15"
rand = "0.8"
serde = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]
